class User {
  constructor(username, password, age) {
    this.username = username;
    this.password = password;
    this.age = age;
  }

}

module.exports = User;
